# full-stack-todo

./: .env.example  .gitignore  AUTHENTICATION_FIX_COMPLETE_ANALYSIS.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  ISSUES_FOUND.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_TROUBLESHOOTING.md  TESTING_THE_FIX.md  docker-compose.yml  render.yaml
.claude/skills/: fastapi-sqlmodel.md  monorepo-structure.md  nextjs-betterauth.md  shadcn-ui-library.md  spec-writer.md
.specify/memory/: constitution.md
backend/: .env.example  CLAUDE.md  Dockerfile.dev  README.md  check_auth_tables.py  create_auth_tables.sql  migrate_auth.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/routes/: auth.py  tasks.py
backend/app/utils/: security.py
backend/tests/: __init__.py  conftest.py  test_tasks.py
frontend/: .env.local.example  BETTERAUTH_FIX.md  CLAUDE.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-db-connection.js  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/components/: navbar.tsx
frontend/hooks/: use-tasks.ts
frontend/lib/: auth-client.ts  auth.ts  use-backend-session.ts  utils.ts
frontend/types/: task.ts
specs/: overview.md
specs/api/: rest-endpoints.md
testing-agent/: .env.example  .gitignore  README.md  diagnostic-test.py  e2e-tester.py  requirements.txt  simple-e2e-tester.py
(+49 files in other folders)
